workspace = { members = [
    "codegen_test",
    "direct_test",
    "global_alloc_test",
    "fuzz",
] }

[package]
name = "fjall"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
bitflags = "2.4.2"
sptr = "0.3.2"
libc = "0.2"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.52"
features = [
    "Win32_System_Memory",
    "Win32_Foundation",
    "Win32_System_SystemServices",    # FOR DLL_THREAD_DETACH
    "Win32_System_Performance",
    "Win32_System_SystemInformation",
]

[features]
system-allocator = []

[profile.release]
panic = "abort"
codegen-units = 1
lto = "thin"
debug = 1
